Change the title.

--- a/RKPP/Views/Home/History.cshtml
+++ b/RKPP/Views/Home/History.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "History";
+    ViewBag.Title = "Historia";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>Historia Koła Pszczelarzy w Pabianicach w skrócie</h3>
