--- a/RKPP/Views/News/Create.cshtml
+++ b/RKPP/Views/News/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model RKPP.Models.New
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Dodaj";
 }
 
-<h2>Create</h2>
+<h2>Dodaj</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,37 +12,46 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>New</h4>
+        <h4>Aktualność</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
+            <v class="control-label col-md-2">Data dodania</v>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control", @Value = DateTime.Now.Date.ToString("dd-MM-yyyy"), @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
+            <v class = "control-label col-md-2">Treść</v>
+            <div class="col-md-10" id="textArea">
+                @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control", rows = 20 } })
+                @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Dodaj" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Powrót", "Index")
 </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<style type="text/css">
+    #textArea textarea {
+        max-width: 600px;
+    }
+</style>
+
+
+
