--- a/RKPP/Views/News/Delete.cshtml
+++ b/RKPP/Views/News/Delete.cshtml
@@ -1,30 +1,30 @@
 ﻿@model RKPP.Models.New
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Usuń";
 }
 
-<h2>Delete</h2>
+<h2>Usuń</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy na pewno usunąć?</h3>
 <div>
-    <h4>New</h4>
+    <h4>Aktualność</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Content)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Content)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Date)
+            <v>Data dodania</v>
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Date)
+        </dd>
+
+        <dt>
+            <v>Treść</v>
+        </dt>
+
+        <dd>
+            @Html.DisplayWithBreaksFor(model => model.Content)            
         </dd>
 
     </dl>
@@ -33,8 +33,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Usuń" class="btn btn-default" /> |
+            @Html.ActionLink("Powrót", "Index")
         </div>
     }
 </div>
