--- a/RKPP/Views/News/Details.cshtml
+++ b/RKPP/Views/News/Details.cshtml
@@ -1,34 +1,34 @@
 ﻿@model RKPP.Models.New
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Szczegóły";
 }
 
-<h2>Details</h2>
+<h2>Szczegóły</h2>
 
 <div>
-    <h4>New</h4>
+    <h4>Aktualność</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Content)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Content)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Date)
+            <v>Data dodania</v>
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Date)
         </dd>
 
+        <dt>
+            <v>Treść</v>
+        </dt>
+
+        <dd>
+            @Html.DisplayWithBreaksFor(model => model.Content)
+        </dd>
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edytuj", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Powrót", "Index")
 </p>
