--- a/RKPP/Views/News/Index.cshtml
+++ b/RKPP/Views/News/Index.cshtml
@@ -1,21 +1,21 @@
 ﻿@model IEnumerable<RKPP.Models.New>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Aktualności";
 }
 
-<h2>Index</h2>
+<h2>Aktualności</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Dodaj", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Content)
+            Treść
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Date)
+            Data dodania
         </th>
         <th></th>
     </tr>
@@ -23,15 +23,15 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Content)
+            @Html.DisplayWithBreaksFor(modelItem => item.Content)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Date)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edytuj", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Szczegóły", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Usuń", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
