--- a/RKPP/Views/News/Index.cshtml
+++ b/RKPP/Views/News/Index.cshtml
@@ -10,30 +10,24 @@
     @Html.ActionLink("Dodaj", "Create")
 </p>
 <table class="table">
-    <tr>
-        <th>
-            Treść
-        </th>
-        <th>
-            Data dodania
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayWithBreaksFor(modelItem => item.Content)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Date)
-        </td>
-        <td>
-            @Html.ActionLink("Edytuj", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Szczegóły", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Usuń", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                <p style="font-weight:bold;font-style:italic;">
+                    @Html.DisplayFor(modelItem => item.Date)
+                </p>
+                <p>
+                    @Html.DisplayWithBreaksFor(modelItem => item.Content)
+                </p>
+                <p>
+                    @Html.ActionLink("Edytuj", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Szczegóły", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Usuń", "Delete", new { id = item.Id })
+                </p>
+            </td>
+        </tr>
+    }
 
 </table>
