Change the footer.

--- a/RKPP/Views/Shared/_Layout.cshtml
+++ b/RKPP/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Rejonowe Koło Pszczelarzy w Pabianicach nr. 8</p>
         </footer>
     </div>
 
