--- a/RKPP/Views/Plans/Create.cshtml
+++ b/RKPP/Views/Plans/Create.cshtml
@@ -17,8 +17,8 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="col-md-10" id="textArea">
+                @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control", rows = 20 } })
                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -38,3 +38,9 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<style type="text/css">
+    #textArea textarea {
+        max-width: 800px;
+    }
+</style>
