Add the Plans tab on the navigation tab.

--- a/RKPP/Views/Shared/_Layout.cshtml
+++ b/RKPP/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Strona domowa", "Index", "News")</li>
+                    <li>@Html.ActionLink("Plan spotkań", "Index", "Plans")</li>
                     <li>@Html.ActionLink("Historia", "History", "Home")</li>
                     <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
                 </ul>
