Check an authentication with the ActionLinks.

--- a/RKPP/Views/News/Index.cshtml
+++ b/RKPP/Views/News/Index.cshtml
@@ -7,7 +7,10 @@
 <h2>Aktualności</h2>
 
 <p>
+@if (User.Identity.IsAuthenticated)
+{
     @Html.ActionLink("Dodaj", "Create")
+}
 </p>
 <table class="table">
 
@@ -22,12 +25,16 @@
                     @Html.DisplayWithBreaksFor(modelItem => item.Content)
                 </p>
                 <p>
-                    @Html.ActionLink("Edytuj", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Szczegóły", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Usuń", "Delete", new { id = item.Id })
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        @Html.ActionLink("Edytuj", "Edit", new { id = item.Id })
+                        <v>|</v>
+                        @Html.ActionLink("Usuń", "Delete", new { id = item.Id })
+                    }
                 </p>
             </td>
         </tr>
-    }
+                    }
 
 </table>
