--- a/RKPP/Views/Shared/_Layout.cshtml
+++ b/RKPP/Views/Shared/_Layout.cshtml
@@ -3,9 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link rel="shortcut icon" type="image/ico" href="@Url.Content("~/favicon.ico")">
+    <title>@ViewBag.Title - RKPP8</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
 
 </head>
 <body>
