--- a/RKPP/Content/bootstrap.css
+++ b/RKPP/Content/bootstrap.css
@@ -311,7 +311,7 @@ html {
 }
 
 body {
-  font-family: SourceSansPro, 'SourceSansPro', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: SourceSansPro, 'SourceSansPro';
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
