--- a/RKPP/Views/Plans/Index.cshtml
+++ b/RKPP/Views/Plans/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Plan spotkań";
 }
 
-<h2 style="font-weight:bold;">Plan spotkań pszczelarzy Rejonowego Koła Pszczelarzy w Pabianicach</h2>
+<h2 style="font-weight:bold;">Plan spotkań pszczelarzy</h2>
 
 <div>
     <a href="#" class="image featured"><img src=@Url.Content("~/images/pic03_2.jpg") alt="" /></a>
