--- a/RKPP/Content/Site.css
+++ b/RKPP/Content/Site.css
@@ -7,6 +7,8 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    background-color: white;
+    background-image: url("images/bg02.png");
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
