--- a/RKPP/Views/News/Index.cshtml
+++ b/RKPP/Views/News/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Aktualności";
 }
 
-<h2 style="font-weight:bold;">Aktualności</h2>
+<h2 style="font-weight:bold;">Rejonowe Koło Pszczelarzy w Pabianicach nr. 8</h2>
 
 <div>
     <a href="#" class="image featured"><img src=@Url.Content("~/images/pic03_2.jpg") alt="" /></a>
